// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RS should prepare conference 1`] = `
Object {
  "city": "Online",
  "codeOfConductIntro": "<p>All attendees, speakers, sponsors and volunteers at ML Conference are required to follow this Code of Conduct. Organisers will strictly enforce it throughout the events and community gatherings. We expect cooperation from all participants to help ensure a safe environment for everybody.</p>
<p>In case you have identified a breach of our CoC, please approach our crew (organizers and volunteers in branded t-shirts) immediately or contact our CoC enforcement team – <a href=\\"mailto:coc@gitnation.org\\">coc@gitnation.org</a>, +44 7376 237 299.</p>
",
  "codeOfConductMain": "<h2>The Short Version</h2>
<p>Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organisers.</p>
<h2>The Long Version</h2>
<p>Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, technology choices, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
<p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
<p>Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualised clothing/uniforms/costumes, or otherwise create a sexualised environment.</p>
<p>If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.</p>
<p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they'll be wearing branded clothing and/or badges.</p>
<p>Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
<p>We expect participants to follow these rules at conference and workshop venues and conference-related social events.</p>
<p>Original source and credit: <a href=\\"http://2012.jsconf.us/#/about\\">http://2012.jsconf.us/#/about</a> &#x26; The Ada Initiative</p>
<p>Please help by translating or improving: <a href=\\"https://github.com/leftlogic/confcodeofconduct.com\\">http://github.com/leftlogic/confcodeofconduct.com</a></p>
<p>This work is licensed under a Creative Commons Attribution 3.0 Unported License</p>
",
  "contentType": "2d89f139f3d042ab98d212062527eb82",
  "facebookUrl": "https://www.facebook.com/MLConfEU/",
  "id": "ckbf89fefszdq0903e20t1g30",
  "mediumUrl": null,
  "slackUrl": null,
  "title": "Machine_Learning_EU",
  "twitterUrl": "https://twitter.com/@MLconfEU",
  "url": "http://mlconf.eu/",
  "youtubeUrl": "https://www.youtube.com/channel/UCXlbjIafLZO9bcJDYjin92w/featured",
}
`;

exports[`RS should prepare conference 2`] = `
Object {
  "city": "Online",
  "codeOfConductIntro": "<p>All attendees, speakers, sponsors and volunteers at ML Conference are required to follow this Code of Conduct. Organisers will strictly enforce it throughout the events and community gatherings. We expect cooperation from all participants to help ensure a safe environment for everybody.</p>
<p>In case you have identified a breach of our CoC, please approach our crew (organizers and volunteers in branded t-shirts) immediately or contact our CoC enforcement team – <a href=\\"mailto:coc@gitnation.org\\">coc@gitnation.org</a>, +44 7376 237 299.</p>
",
  "codeOfConductMain": "<h2>The Short Version</h2>
<p>Our conference is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion (or lack thereof), or technology choices. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks, workshops, parties, Twitter and other online media. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organisers.</p>
<h2>The Long Version</h2>
<p>Harassment includes offensive verbal comments related to gender, gender identity and expression, age, sexual orientation, disability, physical appearance, body size, race, ethnicity, religion, technology choices, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.</p>
<p>Participants asked to stop any harassing behavior are expected to comply immediately.</p>
<p>Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualised clothing/uniforms/costumes, or otherwise create a sexualised environment.</p>
<p>If a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.</p>
<p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they'll be wearing branded clothing and/or badges.</p>
<p>Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
<p>We expect participants to follow these rules at conference and workshop venues and conference-related social events.</p>
<p>Original source and credit: <a href=\\"http://2012.jsconf.us/#/about\\">http://2012.jsconf.us/#/about</a> &#x26; The Ada Initiative</p>
<p>Please help by translating or improving: <a href=\\"https://github.com/leftlogic/confcodeofconduct.com\\">http://github.com/leftlogic/confcodeofconduct.com</a></p>
<p>This work is licensed under a Creative Commons Attribution 3.0 Unported License</p>
",
  "contentType": "2d89f139f3d042ab98d212062527eb82",
  "facebookUrl": "https://www.facebook.com/MLConfEU/",
  "id": "ckbf89fefszdq0903e20t1g30",
  "mediumUrl": null,
  "slackUrl": null,
  "title": "Machine_Learning_EU",
  "twitterUrl": "https://twitter.com/@MLconfEU",
  "url": "http://mlconf.eu/",
  "youtubeUrl": "https://www.youtube.com/channel/UCXlbjIafLZO9bcJDYjin92w/featured",
}
`;

exports[`RS should prepare otherContent 1`] = `"5dab3ad10db6db0ebce02023591662b2d26dbbe7"`;

exports[`RS should prepare pages 1`] = `
Array [
  Object {
    "content": "1a6d2b249a4f679aca87bcb240aceb83d4405d4b",
    "description": null,
    "id": "ckbf9jxjft5070b094631w0dy",
    "pageCode": "coc",
    "seoDescription": "ML conf EU is a place to learn all about the practical application of machine learning for engineers. On November 5-6, 2020 get a clearer idea of ML, and practice it for your own projects",
    "titlePage": "Code Of Conduct",
    "titleSeo": "Code of Conduct – Machine Learning EU",
  },
  Object {
    "content": "6acbdb98eef03525a4f593e16f5fe4aa9a699218",
    "description": null,
    "id": "ckbf9lsn7t52j0b09837yezdo",
    "pageCode": "faq",
    "seoDescription": null,
    "titlePage": "FAQ",
    "titleSeo": "FAQ - Machine Learning EU",
  },
  Object {
    "content": "03e2ec7cb3365a1050a9f02a3fc200017240ca4f",
    "description": null,
    "id": "ckbf9oejz97l50b14o7kk6tri",
    "pageCode": "perks",
    "seoDescription": null,
    "titlePage": "Special Offers from Sponsors",
    "titleSeo": "Special Offers from Sponsors",
  },
  Object {
    "content": "c5c2b73addec9dbdce345c75ac8d3bb3b72d5b68",
    "description": null,
    "id": "ckbf9myg3t53y0b09kvkwuzvi",
    "pageCode": "workshops",
    "seoDescription": null,
    "titlePage": "LEARN FROM THE BEST TRAINERS IN THE CLOUD",
    "titleSeo": "Remote Workshops at ML Conf EU",
  },
  Object {
    "content": "47112dd19aec6a30ab14098a4e781c90d63bc62a",
    "description": "November 5-6, 2020",
    "id": "ckf5o0kav3t0v0911ld5q508b",
    "pageCode": "workshops_alt",
    "seoDescription": "ML conf EU is a place to learn all about the practical application of machine learning for engineers. On November 5-6, 2020 get a clearer idea of ML, and practice it for your own projects",
    "titlePage": "LEARN FROM THE BEST TRAINERS IN THE CLOUD",
    "titleSeo": "Workshops at ML Conf EU",
  },
  Object {
    "content": "5ec66e7c075194a344e9a6a74f02ec7c8fe55fc4",
    "description": null,
    "id": "ckbf9nqcyt0n70903190hzy9e",
    "pageCode": "jobs",
    "seoDescription": null,
    "titlePage": "Top Jobs",
    "titleSeo": "Top Jobs",
  },
  Object {
    "content": "f0bbf624281322f5a94f523fabf2e2aa44edc871",
    "description": "November 5-6, 2020",
    "id": "ckbf894t594ph0b14eta7aitw",
    "pageCode": "main",
    "seoDescription": "ML conf EU is a place to learn all about the practical application of machine learning for engineers. On November 5-6, 2020 get a clearer idea of ML, and practice it for your own projects",
    "titlePage": null,
    "titleSeo": "ML Conf EU – The machine learning conference for engineers",
  },
]
`;

exports[`RS should prepare schedule 1`] = `
Array [
  Object {
    "list": Array [],
    "name": "10",
    "tab": "Talks & Q&A",
    "title": "Talks & Q&A",
  },
]
`;

exports[`RS should prepare speakers 1`] = `
Object {
  "advisers": Array [],
  "committee": Array [
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/HCCCFbRSTL6X51beaCzO",
      "bio": "<p>Sayak loves understanding how things work and explaining them well.</p>
",
      "company": "Deep Learning Associate @ PyImageSearch, India",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "India",
      "decor": true,
      "githubUrl": null,
      "id": "ckckgzi9hjvlt0b97rpt6k8ia",
      "idMain": "ckckgzi9hjvlt0b97rpt6k8ia",
      "mediumUrl": null,
      "name": "Sayak Paul",
      "ownSite": "https://sayak.dev/",
      "portalUrl": null,
      "slug": "sayak-paul",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/RisingSayak",
        },
        Object {
          "icon": "site",
          "link": "https://sayak.dev/",
        },
      ],
      "tag": "speaker--undefined",
      "twitterUrl": "https://twitter.com/RisingSayak",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/Y4ppIrQgQRKzgrl5w64R",
      "bio": "<p>Gant Laborde is an owner of Infinite Red, mentor, adjunct professor, published author, and award-winning speaker. For 20 years, he has been involved in software development and continues strong today. He is an “open sourcerer”, team leader, and aspires to one day become a mad scientist. He blogs, videos, and maintains popular repositories for the community. Follow Gant’s adventures at <a href=\\"http://gantlaborde.com/\\">gantlaborde.com</a>.</p>
",
      "company": "Infinite Red, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "decor": true,
      "githubUrl": "https://github.com/gantman",
      "id": "ck8onrrtegm6x0b2083c9kdmb",
      "idMain": "ck8onrrtegm6x0b2083c9kdmb",
      "mediumUrl": "https://medium.com/@gantlaborde",
      "name": "Gant Laborde",
      "ownSite": null,
      "portalUrl": null,
      "slug": "gant-laborde",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/gantman",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/GantLaborde",
        },
        Object {
          "icon": "med",
          "link": "https://medium.com/@gantlaborde",
        },
      ],
      "tag": "speaker--undefined",
      "twitterUrl": "https://twitter.com/GantLaborde",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/paAUEt3URgyNivFgMhr5",
      "bio": "<p>Dmitry is a Microsoft veteran, working for more than 13 years. He started as a Technical Evangelist, and in this role presented on numerous conferences, including twice being on stage with Steve Ballmer. He then worked for 2 years as Senior Software Engineer, helping big European companies to start pilot digital transformation projects based on AI and ML. As Cloud Developer Advocate, Dmitry focuses on creating educational content and working with academic and research institutions. He is also an Associate Professor at MIPT, HSE and MAI in Moscow, a big fan of functional programming and F#, and a maintainer/primary developer of <a href=\\"http://soshnikov.com/mPyPl/\\">mPyPl</a> library. In his spare time, Dmitry explores Science Art and Technological Magic, as well as performs Chinese tea ceremonies. He can be reached at <a href=\\"http://soshnikov.com\\">soshnikov.com</a>.</p>
",
      "company": "Cloud Developer Advocate @ Microsoft, Russia",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Russia",
      "decor": true,
      "githubUrl": null,
      "id": "ckcq6n36xxgat0b97lxet1gxq",
      "idMain": "ckcq6n36xxgat0b97lxet1gxq",
      "mediumUrl": null,
      "name": "Dmitry Soshnikov",
      "ownSite": "https://soshnikov.com/",
      "portalUrl": null,
      "slug": "dmitry-soshnikov",
      "socials": Array [
        Object {
          "icon": "site",
          "link": "https://soshnikov.com/",
        },
      ],
      "tag": "speaker--undefined",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/x9TKZGXjTdaJEIOUqqTS",
      "bio": "<p>Microsoft AI MVP.  Software Developer and Data Scientist.</p>
<p>Eva is absolutely obsessed with data and passionate about AI. Her main interest is to save lives and support humanity with the help of AI and data. Working in full time at Laerdal.</p>
<p>In her free time she writes articles, speaks at conferences about data and AI. Her aim is to make people understand how intelligent applications affect our lives, how to use and control them.</p>
",
      "company": "Data Scientist, AI MVP @ Laerdal, Denmark",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Denmark",
      "decor": true,
      "githubUrl": "https://github.com/ExOblivione",
      "id": "ckd5oj714v6h60b97p0di0fnz",
      "idMain": "ckd5oj714v6h60b97p0di0fnz",
      "mediumUrl": null,
      "name": "Eve Pardi",
      "ownSite": null,
      "portalUrl": null,
      "slug": "eve-pardi",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/ExOblivione",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/EvePardi",
        },
      ],
      "tag": "speaker--undefined",
      "twitterUrl": "https://twitter.com/EvePardi",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/egC2TkK8RiGWvTO7sMMC",
      "bio": "<p>Yuriy Guts is a Principal Machine Learning Engineer at DataRobot with over 10 years of industry experience in data science and software architecture. His primary interests are productionalizing data science, automated machine learning, time series forecasting, and processing spoken and written language. He teaches AI and ML at UCU, competes on Kaggle, and has led multiple international data science and engineering teams.</p>
",
      "company": "Principal Machine Learning Engineer @ DataRobot, Ukraine",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Ukraine",
      "decor": true,
      "githubUrl": "https://github.com/YuriyGuts",
      "id": "ckeckmmq14aob09085vemh1d3",
      "idMain": "ckeckmmq14aob09085vemh1d3",
      "mediumUrl": null,
      "name": "Yuriy Guts",
      "ownSite": "https://yuriyguts.com/",
      "portalUrl": null,
      "slug": "yuriy-guts",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/YuriyGuts",
        },
        Object {
          "icon": "site",
          "link": "https://yuriyguts.com/",
        },
      ],
      "tag": "speaker--undefined",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/BoKNYpiwRpCs85A2ZRr1",
      "bio": "<p>Sergii enjoys building products with help of Data and Machine Learning.</p>
<p>Sergii founded Machine Learning meetup in Munich - <a href=\\"https://www.meetup.com/Hacking-Machine-Learning\\">Hacking Machine Learning</a>. Currently, meetup has 2000+ members and hosted 29+ events with speakers from a variety of local, as well as top-tier companies like Google, Twitter, Facebook, etc.</p>
<p>From time to time, Sergii invests time by contributing to Open Source projects like <a href=\\"https://github.com/lc0?org=tensorflow&#x26;year_list=1\\">TensorFlow</a> or <a href=\\"https://github.com/lc0?org=OpenMined&#x26;year_list=1\\">PySyft</a>.</p>
",
      "company": "VP Product Engineering @ Stylight, Germany",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Germany",
      "decor": true,
      "githubUrl": "https://github.com/lc0",
      "id": "ckgj8lxv7ehs709112c1y2h62",
      "idMain": "ckgj8lxv7ehs709112c1y2h62",
      "mediumUrl": null,
      "name": "Sergii Khomenko",
      "ownSite": "https://sergii.ml/",
      "portalUrl": null,
      "slug": "sergii-khomenko",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/lc0",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/lc0d3r",
        },
        Object {
          "icon": "site",
          "link": "https://sergii.ml/",
        },
      ],
      "tag": "speaker--undefined",
      "twitterUrl": "https://twitter.com/lc0d3r",
    },
  ],
  "main": Array [
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/7brvhgSVS4uf6VITO3N7",
      "bio": "<p>Thomas Wolf is co-founder and Chief Science Officer of HuggingFace. His team is on a mission to catalyze and democratize NLP research. Prior to HuggingFace, Thomas gained a Ph.D. in physics, and later a law degree. He worked as a physics researcher and a European Patent Attorney.</p>
",
      "color": "#fff",
      "company": "HuggingFace, Netherlands",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Netherlands",
      "githubUrl": "",
      "id": "ckdylgtwttjor0b97ypqupe8h",
      "idAlt": "ckdylhh7pyb2d0a85l68qwdn7",
      "idMain": "ckdylgtwttjor0b97ypqupe8h",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Thomas Wolf",
      "order": 90,
      "ownSite": "https://thomwolf.io/",
      "portalUrl": null,
      "slug": "thomas-wolf",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/Thom_wolf",
        },
        Object {
          "icon": "site",
          "link": "https://thomwolf.io/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": "https://twitter.com/Thom_wolf",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/SMsO6hNqToSFLlHi5ZnD",
      "bio": "<p>Beril Sirmacek is a Dutch AI researcher.
She received her PhD degree in Electrical and Electronics Engineering in 2009.  Later she has worked with German Aerospace Center and pursued a habilitation degree with University of Osnabrueck. </p>
<p>She is an assistant professor at Jonkoping AI Lab and also leading her company <a href=\\"http://www.create4D.com\\">create4D</a>. Beril is passionate to use computer vision and AI algorithms for creating useful healthcare and earth care solutions.   </p>
<p>Beril has taught a MSc course at the University of Augsburg in 2010, only on OpenCV. As a computer vision scientist and developer, she has been using it regularly for many years.</p>
",
      "color": "#fff",
      "company": "Jonkoping University & the Owner of Create4D, Netherlands",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Netherlands",
      "githubUrl": "https://github.com/bsirmacek",
      "id": "cke2h8c6p37bs0916pw6bqecy",
      "idAlt": "cke2h931037d00916wa4qnhdp",
      "idMain": "cke2h8c6p37bs0916pw6bqecy",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Beril Sirmacek",
      "order": 80,
      "ownSite": "http://www.berilsirmacek.com/",
      "portalUrl": null,
      "slug": "beril-sirmacek",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/bsirmacek",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/berilsirmacek",
        },
        Object {
          "icon": "site",
          "link": "http://www.berilsirmacek.com/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": "https://twitter.com/berilsirmacek",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/14lJcRaRKCM071OueBtG",
      "bio": "<p>Robert is a full stack engineer with 15 years of developer experience, helping lead a node based machine learning team at iFit.  From an early age, he strove to understand how things worked by taking them apart, and putting them back together.  He became interested in machine learning in 2015, saw a larger need in the node community, and eventually became a maintainer of Brain.js and GPU.js.  His desire to convey the simplicity of neural networks was manifest in his machine learning course on scrimba: Neural networks in JavaScript.</p>
",
      "color": "#fff",
      "company": "iFit, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": "https://github.com/robertleeplummerjr",
      "id": "ckfxqmtvkeuf109116j0clji3",
      "idAlt": "ckfxqn7ypeug00911vpnw1ltq",
      "idMain": "ckfxqmtvkeuf109116j0clji3",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Robert Plummer",
      "order": 30,
      "ownSite": null,
      "portalUrl": null,
      "slug": "robert-plummer",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/robertleeplummerjr",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/robertlplummer",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": "https://twitter.com/robertlplummer",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/zftyKRqnRj2HCVzdU1ng",
      "bio": "<p>Shivani Poddar is a Machine Learning Tech Lead for the Meeting Assistant team at Workplace, Facebook, leading the development of meeting assistants for making remote collaboration easier for work. Previously, Shivani built and launched the foundational machine learning and AI stack for Facebook Portal, spearheading product and engineering development across social graph technology for ML, deep personalization for a smarter calling experience.</p>
<p>She was also the first ever student at Carnegie Mellon to be funded by the Amazon Alexa Prize, where she and her team built a social chatbot, eventually deployed to tens of thousands of users through Alexa. During her time at CMU she also pursued research in the field of Natural Language Generation, Reinforcement Learning for chatbots and multimodal machine learning.</p>
<p>Outside of Work, Shivani has emerged as one of the leaders in talking about Artificial Intelligence and Machine Learning for Consumers as well as Enterprises. She has been a speaker at numerous conferences over the last 2 years covering topics such as – <a href=\\"https://www.linkedin.com/in/shivani-poddar/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAAAwpCiABeVxhNMfaStBzKpQsyhYaSIcLQfw,1598914763092)/\\">Diversity and Bias in AI</a>, <a href=\\"https://www.linkedin.com/pulse/future-work-now-shivani-poddar/\\">Future of Work</a>, <a href=\\"https://www.linkedin.com/in/shivani-poddar/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAAAwpCiABeVxhNMfaStBzKpQsyhYaSIcLQfw,1589495599728)/\\">Immersive Multimodal Assistants</a>. She is also a mentor for young aspirants looking to become the next innovators in the field, and regularly volunteers in resume building workshops, <a href=\\"https://www.linkedin.com/in/shivani-poddar/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAAAwpCiABeVxhNMfaStBzKpQsyhYaSIcLQfw,1589495956663)/\\">panels for hiring</a> and Q&#x26;As on LinkedIn.</p>
",
      "color": "#fff",
      "company": "Facebook, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": null,
      "id": "ckfxostm6kh8h09709xsjep4o",
      "idAlt": "ckfxoteoomcb90b771lzqctod",
      "idMain": "ckfxostm6kh8h09709xsjep4o",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Shivani Poddar",
      "order": 58,
      "ownSite": "https://www.linkedin.com/in/shivani-poddar/",
      "portalUrl": null,
      "slug": "shivani-poddar",
      "socials": Array [
        Object {
          "icon": "site",
          "link": "https://www.linkedin.com/in/shivani-poddar/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/HMcDToBZThKUyStSZokG",
      "bio": "<p>Laurence Moroney leads AI Advocacy at Google, working as part of the Google Research into Machine Intelligence (RMI) team. He's the author of more programming books than he can count, including 'AI and Machine Learning for Coders' with OReilly, to be published in October 2020. He's also the instructor and creator of the TensorFlow In Practice, and TensorFlow Data and Deployment specializations on Coursera. He also runs the YouTube channel for tensorflow at <a href=\\"http://tensorflow.org/certificate\\">Youtube.com/tensorflow</a>, and the TensorFlow certificate program for developers at tensorflow.org/certificate. When not working on AI, he's a published Sci-Fi author, comic book creator and IMDB-listed screenwriter. </p>
",
      "color": "#fff",
      "company": "Google, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": null,
      "id": "ckdr8zmv6pb190a8544lultsh",
      "idAlt": "ckdr9076bpb2i0a85ypwciz8e",
      "idMain": "ckdr8zmv6pb190a8544lultsh",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Laurence Moroney",
      "order": 70,
      "ownSite": "http://www.laurencemoroney.com/",
      "portalUrl": null,
      "slug": "laurence-moroney",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/lmoroney",
        },
        Object {
          "icon": "site",
          "link": "http://www.laurencemoroney.com/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": "https://twitter.com/lmoroney",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/N5EnxezQ3eEjw9Ug62Oc",
      "bio": "<p>Dipanjan (DJ) Sarkar is a Data Science Lead at Applied Materials, leading advanced analytics efforts around computer vision, natural language processing and deep learning. He is also a Google Developer Expert in Machine Learning. He has also been recently recognized as one of the Top Ten Data Scientists in India, 2020 by Analytics India Magazine &#x26; TechGig.
Dipanjan has advised and worked with several startups as well as Fortune 500 companies like Intel and Open Source organizations like Red Hat (now IBM). He primarily works on leveraging data science, machine learning and deep learning to build large- scale intelligent systems and evangelizing data science to the community.</p>
<p>Dipanjan is also a published author, having authored several books on R, Python, Machine Learning, Natural Language Processing, and Deep Learning.</p>
",
      "color": "#fff",
      "company": "Applied Materials, India",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "India",
      "githubUrl": "https://github.com/dipanjanS",
      "id": "ckg1zgqj4y1st0970gs0q4r6b",
      "idAlt": "ckg1zhmvdy21j0970wjop5c4v",
      "idMain": "ckg1zgqj4y1st0970gs0q4r6b",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Dipanjan Sarkar",
      "order": 40,
      "ownSite": "https://www.linkedin.com/in/dipanzan/",
      "portalUrl": null,
      "slug": "dipanjan-sarkar",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/dipanjanS",
        },
        Object {
          "icon": "site",
          "link": "https://www.linkedin.com/in/dipanzan/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/ERUxg3ltSYWNetaB0NhV",
      "bio": "<p>Frans is Chief Data Officer at ixpantia. He combines a diverse skill-set, that includes business analysis, data analysis and enterprise architecture, with more than 15 years of experience to help organizations respond to their data driven innovation needs quickly and effectively. Frans has a PhD in biology from the University of Amsterdam and has taught at universities in Europe and Latin America. As a consultant he has facilitated in-company training on diverse topics, including data driven innovation, applied statistics, statistical programming and machine learning.</p>
",
      "color": "#fff",
      "company": "ixpantia, Costa Rica",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Costa Rica",
      "githubUrl": "https://github.com/FvD",
      "id": "ckg20pe6mvts90b77utmtafqu",
      "idAlt": "ckg20pycko5xp0911g69b166d",
      "idMain": "ckg20pe6mvts90b77utmtafqu",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Frans van Dunné",
      "order": 25,
      "ownSite": null,
      "portalUrl": null,
      "slug": "frans-van-dunne",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/FvD",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/fransvandunne",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": "https://twitter.com/fransvandunne",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/F7YCYuB6QRi2rJhNXGmS",
      "bio": "<p>Jason is a Senior Developer Advocate for TensorFlow.js at Google.</p>
<p>Jason combines his knowledge of the technical and creative worlds to solve complex, strategic / technical challenges for Google's largest customers and internal teams. Developing innovative world firsts utilizing the latest technologies and hardware is a key component of his role to rapidly prototype new ideas and consult on project solutions globally. </p>
<p>With a background in Computer Science at the University of Bristol, England, where he specialized in reality mining and invisible computing,  Jason has been a \\"hybrid engineer\\" for over 15 years. Combining his passion for several areas including both front and back end web programming, but also design and user experience, he has worked in many sizes of companies from startups (including founding his own) to Google. </p>
",
      "color": "#fff",
      "company": "Google, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": null,
      "id": "ckenytg4xv9ky0908tyf29riv",
      "idAlt": "ckenyu1y8v9mp0908c63db5oz",
      "idMain": "ckenytg4xv9ky0908tyf29riv",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Jason Mayes",
      "order": 55,
      "ownSite": "http://jasonmayes.com/",
      "portalUrl": null,
      "slug": "jason-mayes",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/jason_mayes",
        },
        Object {
          "icon": "site",
          "link": "http://jasonmayes.com/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": "https://twitter.com/jason_mayes",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/8likmnwQQhaUevnwhfD1",
      "bio": "<p>Haifeng is a member of Keras team at Google and a PhD candidate in DATA Lab at Texas A&#x26;M University. His research interests are AutoML and deep learning. He is the creator and project lead of AutoKeras, which aims to make deep learning more accessible with AutoML techniques.</p>
",
      "color": "#000",
      "company": "Keras Team at Google, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": "https://github.com/haifeng-jin",
      "id": "ckfc7yqomj01e0b77msbkbt35",
      "idAlt": "ckfc7zcbaw0ma0970sd7vbyqa",
      "idMain": "ckfc7yqomj01e0b77msbkbt35",
      "isNightSpeaker": null,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Haifeng Jin",
      "order": 60,
      "ownSite": "https://haifengjin.com/",
      "portalUrl": null,
      "slug": "haifeng-jin",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/haifeng-jin",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/haifeng_jin",
        },
        Object {
          "icon": "site",
          "link": "https://haifengjin.com/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": "https://twitter.com/haifeng_jin",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/LTh49xvNR1CYJDdDlCHM",
      "bio": "<p>Mikhail Burtsev is a head of Neural Networks and Deep Learning Laboratory at Moscow Institute of Physics and Technology. He is also a founder and leader of open-source conversational AI framework <a href=\\"http://deeppavlov.ai/\\">DeepPavlov</a>. Mikhail had proposed and co-organize a series of academic <a href=\\"http://convai.io/\\">Conversational AI Challenges</a> (including NIPS 2017, NeurIPS 2018, EMNLP 2020).  </p>
<p>His research interests are in the fields of Natural Language Processing, Machine Learning, Artificial Intelligence and Complex Systems. Mikhail Burtsev has published more than 20 technical papers including – Nature, Artificial Life, Lecture Notes in Computer Science series, and other peer-reviewed venues. </p>
",
      "color": "#000",
      "company": "DeepPavlov.ai, Russia",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Russia",
      "githubUrl": null,
      "id": "ckejts5zpox7v0a854aku8ol5",
      "idAlt": "ckejtsyxbox930a856pur09jb",
      "idMain": "ckejts5zpox7v0a854aku8ol5",
      "isNightSpeaker": null,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Mikhail Burtsev",
      "order": 45,
      "ownSite": null,
      "portalUrl": null,
      "slug": "mikhail-burtsev",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/mikhailburtsev",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": "https://twitter.com/mikhailburtsev",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/w56yxLG3RAKaoRRKnQZQ",
      "bio": "<p>Yama is a data scientist at MyPart, an Israeli startup in the music industry, developing algorithms and researching lyrical and musical song features. In her spare time, she gives tech talks at conferences and meetups (Geektime Code, PyData Tel Aviv, IsraelClouds); and mentors a group of developers through their first steps in the data science world as a part of Baot - Israel’s largest community of senior female engineers and computer scientists. Yama has a B.Sc in mathematics and physics from Tel Aviv University where she also expresses her passion for music by playing the saxophone in the TAU Wind Band.</p>
",
      "color": "#000",
      "company": "MyPart, Israel",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Israel",
      "githubUrl": null,
      "id": "ckg21793ryad70970a1dnp470",
      "idAlt": "ckg217zwnvvmi0b771dwbulbq",
      "idMain": "ckg21793ryad70970a1dnp470",
      "isNightSpeaker": false,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Yama Anin Aminof",
      "order": 20,
      "ownSite": null,
      "portalUrl": null,
      "slug": "yama-anin-aminof",
      "socials": Array [],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/h7xwGrZCTziaystEqdAn",
      "bio": "<p>Håkan holds a Master of Science degree in Electrical Engineering and in addition, he holds a Master’s degree in Leadership and Organizational behavior. He has also taken courses on university level in psychology, interaction design and human-computer interaction. He has 20 years’ experience of software development in various positions such as developer, tester, architect, project manager, scrum master, practice manager and team lead. </p>
<p>Håkan is Chairman of the local chapter of the Norwegian .NET User Group Oslo (NNUG) and is active as an Ambassador for Oslo.AI the local chapter for the global City.AI community. </p>
<p>Håkan is a Microsoft Most Valuable Professional (MVP) in AI. </p>
<p>Currently, Håkan is working as Manager AI and Big Data at Miles AS, a Norwegian consultancy company.</p>
",
      "color": "#000",
      "company": "Miles AS, Norway",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Norway",
      "githubUrl": null,
      "id": "ckfzj1vexixwq09118hvpudkc",
      "idAlt": "ckfzj2icmqlck0b77rv5en92u",
      "idMain": "ckfzj1vexixwq09118hvpudkc",
      "isNightSpeaker": null,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Håkan Silfvernagel",
      "order": 35,
      "ownSite": "https://sessionize.com/hakan-silfvernagel/",
      "portalUrl": null,
      "slug": "hakan-silfvernagel",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/agrevlis",
        },
        Object {
          "icon": "site",
          "link": "https://sessionize.com/hakan-silfvernagel/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": "https://twitter.com/agrevlis",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/fQXe6CNSNWSFzZRHHNAt",
      "bio": "<p>Javier Alcaide is a mathematician and software developer focused on data science and machine learning. His professional career is based on the use of advanced analytics and big data techniques within the financial sector. His current role is the design and construction of AI models and the analysis of data using ETL processing with Big Data technologies.</p>
",
      "color": "#000",
      "company": "Bluetab Solutions, Spain",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Spain",
      "githubUrl": null,
      "id": "ckg201z8ty4vn0970nzm3sacl",
      "idAlt": "ckg203qwbvr1q0b77hlguntuu",
      "idMain": "ckg201z8ty4vn0970nzm3sacl",
      "isNightSpeaker": null,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Javier Alcaide Pérez",
      "order": 15,
      "ownSite": "https://www.linkedin.com/in/javier-alcaide-pérez-127b92115/",
      "portalUrl": null,
      "slug": "javier-alcaide-perez",
      "socials": Array [
        Object {
          "icon": "site",
          "link": "https://www.linkedin.com/in/javier-alcaide-pérez-127b92115/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/wZZYXMC5Q161kvF5tRLX",
      "bio": "<p>Jayeeta is a Senior Data Scientist with 4+ years of industry experience. Currently, she is working on machine learning and NLP projects and explores a lot of state-of-the-art models to build cool products at Indellient US Inc., a leading software development and IT professional services company working with Fortune 100 companies. Prior to that, she worked at Deloitte. Jayeeta is also engaged with some amazing organizations like Women Who Code and Women Tech Network to promote and inspire more women to take up STEM and often leads technical webinars and talks. She received her Master of Science in Quantitative Methods and Modeling from City University of New York, NY and Bachelor of Science in Economics and Statistics from West Bengal State University, India.</p>
",
      "color": "#000",
      "company": "Indellient US Inc., USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": "https://github.com/JayeetaP",
      "id": "ckfwakcukjoth0b77jayqbtyp",
      "idAlt": "ckfwakx1ajovd0b77p7len4w9",
      "idMain": "ckfwakcukjoth0b77jayqbtyp",
      "isNightSpeaker": null,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Jayeeta Putatunda",
      "order": 47,
      "ownSite": null,
      "portalUrl": null,
      "slug": "jayeeta-putatunda",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/JayeetaP",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/JayeetaPJ",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": "https://twitter.com/JayeetaPJ",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/CaCEu0MlRDq0eucEqYlX",
      "bio": "<p>Marco is a Data Scientist at the Samsung R&#x26;D Institute UK. Outside of work, he is a maintainer of pandas (data wrangling platform for Python widely adopted in the scientific computing community) and author of nbQA (code quality tool for Jupyter Notebooks). He holds an MSc in Mathematics and Foundations of Computer Science from the University of Oxford.</p>
",
      "color": "#000",
      "company": "Samsung R&D Institute UK, UK",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "UK",
      "githubUrl": "https://github.com/MarcoGorelli",
      "id": "ckfc7l2znvzpb0970jn9s977c",
      "idAlt": "ckfc7lqievzqx0970lok1f9c0",
      "idMain": "ckfc7l2znvzpb0970jn9s977c",
      "isNightSpeaker": null,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Marco Gorelli",
      "order": 50,
      "ownSite": null,
      "portalUrl": null,
      "slug": "marco-gorelli",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/MarcoGorelli",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/xAAf375bRyukGEH9JbuW",
      "bio": "<p>Andreas Müller is a Principal Research SDE at Microsoft, where he works on the interface of the Data Science ecosystem and cloud infrastructure.</p>
<p>He previously held positions as Associate Research Scientist at the Columbia Data Science Institute and as a Research Engineer at the NYU Center for Data Science.</p>
<p>He is one of the core developers of the scikit-learn machine learning library, a member of the scikit-learn technical committee, and the author of the book \\"Introduction to machine learning with Python\\".</p>
<p>His work focuses on practical aspects of machine learning and the development of user-centric machine learning software.</p>
",
      "color": "#000",
      "company": "Microsoft, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": "https://github.com/amueller",
      "id": "cke2ga93k35ty0916ep1gv17c",
      "idAlt": "cke2gatwa35v70916l8ps7v0j",
      "idMain": "cke2ga93k35ty0916ep1gv17c",
      "isNightSpeaker": null,
      "label": "November 6",
      "mediumUrl": null,
      "name": "Andreas Müller",
      "order": 100,
      "ownSite": "http://amueller.github.io/",
      "portalUrl": null,
      "slug": "andreas-muller",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/amueller",
        },
        Object {
          "icon": "tw",
          "link": "https://twitter.com/amuellerml",
        },
        Object {
          "icon": "site",
          "link": "http://amueller.github.io/",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#fcd725",
      "twitterUrl": "https://twitter.com/amuellerml",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/SC4Js253SvGp4gBA34d3",
      "bio": "<p>Jaroslaw Rzepecki is a Senior Research Engineer at Microsoft Research Lab in Cambridge, UK. He has a MSc in theoretical physics from Nicolaus Copernicus University and a PhD in astrophysics from Heidelberg University. After completion of his PhD he joined video games industry where he worked on two published titles (DiRT 2, Grid). Jaroslaw has also worked as a research engineer in computer graphics, investigating solutions to the global illumination problem in video games. Currently he is working in the Game Intelligence group at MSR where he combines his passion for engineering, video games and machine learning to make video games more fun for everybody.</p>
",
      "color": "white",
      "company": "Microsoft Research Lab, UK",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "UK",
      "githubUrl": null,
      "id": "ckgrtcxcnsdj60911jcf9usox",
      "idAlt": "ckgrtdqcbsdlq09118f0kto7g",
      "idMain": "ckgrtcxcnsdj60911jcf9usox",
      "isNightSpeaker": null,
      "label": "Discussion Room",
      "mediumUrl": null,
      "name": "Jaroslaw Rzepecki",
      "order": null,
      "ownSite": null,
      "portalUrl": null,
      "slug": "jaroslaw-rzepecki",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/JarekRzepecki",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#7d7d7d",
      "twitterUrl": "https://twitter.com/JarekRzepecki",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/4Fce7VV7RFeeFy60yzal",
      "bio": "<p>Argyris is the SVP of Data at Orfium.com, and a PhD candidate in Cyprus University of Technology. His research interests are NLP and Machine learning. He is the founder and lead researcher at summarly.com, and co-organizer of PyData Cyprus.</p>
",
      "color": "#fff",
      "company": "Orfium.com, Cyprus",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Cyprus",
      "githubUrl": null,
      "id": "ckgt7phe5uv5l0911epmps679",
      "idAlt": "ckgt7qkwouv8w0911wuyc615i",
      "idMain": "ckgt7phe5uv5l0911epmps679",
      "isNightSpeaker": false,
      "label": "Workshop",
      "mediumUrl": null,
      "name": "Argyris Argyrou",
      "order": null,
      "ownSite": null,
      "portalUrl": null,
      "slug": "argyris-argyrou",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/argyrisargyrou",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#000",
      "twitterUrl": "https://twitter.com/argyrisargyrou",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/jGpjlA6GShqJnqYXGlHm",
      "bio": "<p>Theodoros is the Lead ML Data Scientist in Audio Recognition at Orfium.com. His research and work focuses both on deep learning and algorithmic methods to solve audio-related problems such as exact audio recognition, cover song recognition, denoising and audio classification. The process includes everything from feature design and extraction to model training and evaluation. </p>
",
      "color": "#fff",
      "company": "Orfium.com, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": null,
      "id": "ckgt7s0cc2lba0b77l3u1gw5m",
      "idAlt": "ckgt7slmzvwqs0970cj2rst5n",
      "idMain": "ckgt7s0cc2lba0b77l3u1gw5m",
      "isNightSpeaker": null,
      "label": "Workshop",
      "mediumUrl": null,
      "name": "Theodoros Palamas",
      "order": null,
      "ownSite": null,
      "portalUrl": null,
      "slug": "theodoros-palamas",
      "socials": Array [],
      "tag": "speaker--undefined",
      "tagBG": "#000",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/5YFoZXvPQgyNW9kHnhnF",
      "bio": "<p>I encourage others to see different perspectives and constructively break the rules. Observe - Optimize - Learn - Repeat is my work and life motto. Next to it, I found my joy in building and optimizing end-to-end Machine Learning Systems. </p>
<ul>
<li>Principal Data Solutions Engineer @ LINKIT </li>
<li>Organizer (volunteer) @ PyLadies Amsterdam </li>
<li>WaiACCELERATE Tech Mentor (volunteer) @ Women in AI </li>
</ul>
",
      "color": "#fff",
      "company": "LINKIT, Netherlands",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "Netherlands",
      "githubUrl": "https://github.com/EzheZhezhe",
      "id": "ckgm6titarfyw0b77oqpl2kh8",
      "idAlt": "ckgm6u122dukb0970abulp1tx",
      "idMain": "ckgm6titarfyw0b77oqpl2kh8",
      "isNightSpeaker": null,
      "label": "Workshop",
      "mediumUrl": null,
      "name": "Alyona Galyeva",
      "order": null,
      "ownSite": "https://www.linkedin.com/in/alyonagalyeva",
      "portalUrl": null,
      "slug": "alyona-galyeva",
      "socials": Array [
        Object {
          "icon": "gh",
          "link": "https://github.com/EzheZhezhe",
        },
        Object {
          "icon": "site",
          "link": "https://www.linkedin.com/in/alyonagalyeva",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#000",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/E3ZZ6fwJTiGnP8x6cGL8",
      "bio": "<p>Bernhard Suhm is the product manager for Machine Learning at MathWorks. He works closely with customer facing and development teams to address customer needs and market trends in our machine learning related products, primarily the Statistics and Machine Learning toolbox. Prior to joining MathWorks Bernhard led analyst teams and developed methods applying analytics to optimizing the delivery of customer service in call centers. He also held positions at a usability consulting company and Carnegie Mellon University. He received a PhD in Computer Science specializing in speech user interfaces from Karlsruhe University in Germany.</p>
",
      "color": "#fff",
      "company": "MathWorks, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": null,
      "id": "ckg29vd0aouka09115rd0kiv6",
      "idAlt": "ckg29x8p7wi4i0b77ydgo33ex",
      "idMain": "ckg29vd0aouka09115rd0kiv6",
      "isNightSpeaker": false,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Bernhard Suhm",
      "order": 14,
      "ownSite": null,
      "portalUrl": null,
      "slug": "bernhard-suhm",
      "socials": Array [
        Object {
          "icon": "tw",
          "link": "https://twitter.com/BernhardSuhm",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": "https://twitter.com/BernhardSuhm",
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/wuUGibzUTjq8Yedc2b6A",
      "bio": "<p>Louvere Walker-Hannon is a MathWorks Senior Application Engineer, who provides direction and recommendations on technical workflows for various applications. Specifically, she assists with providing guidance on the following topics image processing, computer vision, machine learning, deep learning, geospatial analysis, and data analytics when discussing technical workflows.  She has a bachelor’s degree in Biomedical Engineering and a master’s degree in Geographic Information Technology with a specialization in Remote Sensing.  Louvere has worked in three different engineering roles throughout her 20 year career while at MathWorks and is a STEM advocate.</p>
",
      "color": "#fff",
      "company": "MathWorks, USA",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "USA",
      "githubUrl": null,
      "id": "ckglyfhmgcxlu0970wsg35chb",
      "idAlt": "ckglyga9qcxoh0970fc7nskfp",
      "idMain": "ckglyfhmgcxlu0970wsg35chb",
      "isNightSpeaker": null,
      "label": "Workshop",
      "mediumUrl": null,
      "name": "Louvere Walker-Hannon",
      "order": 13,
      "ownSite": null,
      "portalUrl": null,
      "slug": "louvere-walker-hannon",
      "socials": Array [],
      "tag": "speaker--undefined",
      "tagBG": "#000",
      "twitterUrl": null,
    },
    Object {
      "activities": Object {},
      "avatar": "https://media.graphassets.com/resize=fit:crop,height:500,width:500/output=format:jpg/bigKWPlJTmirgRk4LusP",
      "bio": "<p>Sachin is a Deputy Director at Applied Materials leading efforts in Data Science and Advanced Analytics with a team of data scientists, working to provide innovative solutions with a focus on AI enablement in various products and systems for the semiconductor equipment manufacturing industry. </p>
<p>He has over 15 years of diverse experience in the Industry around Software, Data Science and Artificial Intelligence.</p>
",
      "color": "#fff",
      "company": "Applied Materials, India",
      "contentType": "e981e312fd6c48a39230de9193be4db9",
      "contentTypeAlt": "d31070ab4611456a83fa837a6ccea527",
      "country": "India",
      "githubUrl": null,
      "id": "ckg2lwijapss30911ds4o9ize",
      "idAlt": "ckg2lx5glxfur0b77na4mxbzh",
      "idMain": "ckg2lwijapss30911ds4o9ize",
      "isNightSpeaker": null,
      "label": "November 5",
      "mediumUrl": null,
      "name": "Sachin Dangayach",
      "order": 12,
      "ownSite": "https://www.linkedin.com/in/sachin-dangayach-6a7a685",
      "portalUrl": null,
      "slug": "sachin-dangayach",
      "socials": Array [
        Object {
          "icon": "site",
          "link": "https://www.linkedin.com/in/sachin-dangayach-6a7a685",
        },
      ],
      "tag": "speaker--undefined",
      "tagBG": "#4064ff",
      "twitterUrl": null,
    },
  ],
  "performanceTeam": Array [],
  "workshops": Array [],
}
`;

exports[`RS should prepare sponsors 1`] = `
Array [
  Object {
    "category": "Gold",
    "list": Array [
      Object {
        "alt": "Microsoft",
        "category": "Gold",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckgghivfty5ba09704edb3tgk",
        "idAlt": "ckgghjhvthbwe0b772bvrs6ti",
        "img": "https://media.graphassets.com/SW2Nl2NUSoeSwAMUV9WA",
        "link": "https://aka.ms/mlconf",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/W1IchFQcKWJvhu6J6AHA",
          },
          "id": "ckgghivfty5ba09704edb3tgk",
          "site": "",
          "title": "Microsoft",
        },
        "width": 550,
      },
      Object {
        "alt": "Yandex.Toloka",
        "category": "Gold",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckh0ebs5w4vzl0911wczej9ev",
        "idAlt": "ckh0eckwsd28i0970xcd8jswd",
        "img": "https://media.graphassets.com/qT4FNVxRJCtJsCAzNJ5g",
        "link": "https://toloka.ai/?utm_source=conference&utm_medium=sponsor&utm_compaign=mlconf2020eu",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/qT4FNVxRJCtJsCAzNJ5g",
          },
          "id": "ckh0ebs5w4vzl0911wczej9ev",
          "site": "https://toloka.ai/?utm_source=conference&utm_medium=sponsor&utm_compaign=mlconf2020eu",
          "title": "Yandex.Toloka",
        },
        "width": 150,
      },
    ],
    "mod": "logos_md sponsors-block_lg",
    "title": "Gold",
  },
  Object {
    "category": "Silver",
    "list": Array [
      Object {
        "alt": "MathWorks",
        "category": "Silver",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckggi9cyihdwj0b77kr6mb8va",
        "idAlt": "ckggi9vuyhdx60b77378veh3p",
        "img": "https://media.graphassets.com/CJWd6VHiRXWHCDzxz9vS",
        "link": "https://www.mathworks.com/?s_eid=PEP_24253",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/CJWd6VHiRXWHCDzxz9vS",
          },
          "id": "ckggi9cyihdwj0b77kr6mb8va",
          "site": "https://www.mathworks.com/?s_eid=PEP_24253",
          "title": "MathWorks",
        },
        "width": 300,
      },
      Object {
        "alt": "academy.infinite.red",
        "category": "Silver",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckgm4r0n6rafo0b77yd21ln97",
        "idAlt": "ckgm4rnfwjmhi0911493rrueo",
        "img": "https://media.graphassets.com/6TV0Hac9SqWFgW7tHPaW",
        "link": "https://academy.infinite.red/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/6TV0Hac9SqWFgW7tHPaW",
          },
          "id": "ckgm4r0n6rafo0b77yd21ln97",
          "site": "https://academy.infinite.red/",
          "title": "academy.infinite.red",
        },
        "width": 300,
      },
    ],
    "mod": "logos_sm sponsors-block_lg",
    "title": "Silver",
  },
  Object {
    "category": "ProductionPartner",
    "list": Array [
      Object {
        "alt": "Google",
        "category": "ProductionPartner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckebfhrq9e2n5091610xk7h7q",
        "idAlt": "ckfc86kq2j0dl0b77qzajqdfh",
        "img": "https://media.graphassets.com/kZoesI7SKyJgpmcH6mtq",
        "link": "https://about.google/intl/en/",
        "order": 1,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/kZoesI7SKyJgpmcH6mtq",
          },
          "id": "ckebfhrq9e2n5091610xk7h7q",
          "site": "https://about.google/intl/en/",
          "title": "Google",
        },
        "width": 250,
      },
      Object {
        "alt": "Focus Reactive",
        "category": "ProductionPartner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ck0zk3adkpuu60b49tpdsxjlg",
        "idAlt": "ckc62iejhuv340903lo42kaaf",
        "img": "https://media.graphassets.com/LbvdRkVR51Tqctf3ZTbw",
        "link": "https://focusreactive.com",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/Pxjw8dqhRqe2SGSpxZTD",
          },
          "id": "ck0zk3adkpuu60b49tpdsxjlg",
          "site": "https://focusreactive.com",
          "title": "Focus Reactive",
        },
        "width": 100,
      },
    ],
    "mod": "logos_sm sponsors-block_lg",
    "title": "Production Partners",
  },
  Object {
    "category": "Partner",
    "list": Array [
      Object {
        "alt": "schoolofdatascience",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckfp6prqu54n70b77hfoj1tiq",
        "idAlt": "ckfp6ql8kxkam09110pf6grrk",
        "img": "https://media.graphassets.com/DskImJjQMqsz7wJ1PVTg",
        "link": "https://schoolofdatascience.nl/",
        "order": 1,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/DskImJjQMqsz7wJ1PVTg",
          },
          "id": "ckfp6prqu54n70b77hfoj1tiq",
          "site": "https://schoolofdatascience.nl/",
          "title": "schoolofdatascience",
        },
        "width": 90,
      },
      Object {
        "alt": "Women Who Code Toronto",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckes8yaiuzw260916gjjun4dc",
        "idAlt": "ckes8yu1300ta0a8506rxcoia",
        "img": "https://media.graphassets.com/XxMHXWYRRpmobHKAXqb2",
        "link": "https://www.meetup.com/Women-Who-Code-Toronto/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/XxMHXWYRRpmobHKAXqb2",
          },
          "id": "ckes8yaiuzw260916gjjun4dc",
          "site": "https://www.meetup.com/Women-Who-Code-Toronto/",
          "title": "Women Who Code Toronto",
        },
        "width": 70,
      },
      Object {
        "alt": "AIgents",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckes93hwa010u0a85mnxcyi8g",
        "idAlt": "ckes94cpa013a0a85mn1r9e02",
        "img": "https://media.graphassets.com/d6xrxNFvRCqVvXzTk0Fc",
        "link": "https://aigents.co/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/d6xrxNFvRCqVvXzTk0Fc",
          },
          "id": "ckes93hwa010u0a85mnxcyi8g",
          "site": "https://aigents.co/",
          "title": "AIgents",
        },
        "width": 80,
      },
      Object {
        "alt": "toelt.ai",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckes8vtpi00oc0a8578r7weop",
        "idAlt": "ckes8wjhhzvzc0916jvk4i95j",
        "img": "https://media.graphassets.com/1OCGoxDQaucI9d2mgA9g",
        "link": "http://toelt.ai/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/1OCGoxDQaucI9d2mgA9g",
          },
          "id": "ckes8vtpi00oc0a8578r7weop",
          "site": "http://toelt.ai/",
          "title": "toelt.ai",
        },
        "width": 130,
      },
      Object {
        "alt": "Crow intelligence",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckes90nj147yg0908g00hfc45",
        "idAlt": "ckes91b5300y30a85f3lbus7t",
        "img": "https://media.graphassets.com/BKHjYWulQdaJzHTQT2zE",
        "link": "https://crowintelligence.org/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/BKHjYWulQdaJzHTQT2zE",
          },
          "id": "ckes90nj147yg0908g00hfc45",
          "site": "https://crowintelligence.org/",
          "title": "Crow intelligence",
        },
        "width": 50,
      },
      Object {
        "alt": "LA Big Data Science, Deep Learning & AI",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "cketokwuj1py00a857v338b21",
        "idAlt": "cketoll851pzc0a85ka9d07sw",
        "img": "https://media.graphassets.com/GS8ySaBQuGuIYpm4geR8",
        "link": "https://www.meetup.com/Los-Angeles-Deep-Learning-Big-Data-Science-AI/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/GS8ySaBQuGuIYpm4geR8",
          },
          "id": "cketokwuj1py00a857v338b21",
          "site": "https://www.meetup.com/Los-Angeles-Deep-Learning-Big-Data-Science-AI/",
          "title": "LA Big Data Science, Deep Learning & AI",
        },
        "width": 110,
      },
      Object {
        "alt": "NY-NLP",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "cketonbrn1m7l09166t8g0n1r",
        "idAlt": "cketonyl91q3e0a857d6ftnjk",
        "img": "https://media.graphassets.com/sHQPIieSOO0LXTJGVIFT",
        "link": "https://www.meetup.com/NY-NLP/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/sHQPIieSOO0LXTJGVIFT",
          },
          "id": "cketonbrn1m7l09166t8g0n1r",
          "site": "https://www.meetup.com/NY-NLP/",
          "title": "NY-NLP",
        },
        "width": 80,
      },
      Object {
        "alt": "Machine Learning Torino",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "cketoutno1mgo0916442pe408",
        "idAlt": "cketovteo1mii0916ab53mha3",
        "img": "https://media.graphassets.com/aVaO6DV6QOmItplO0GJO",
        "link": "https://www.meetup.com/Machine-Learning-TO/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/aVaO6DV6QOmItplO0GJO",
          },
          "id": "cketoutno1mgo0916442pe408",
          "site": "https://www.meetup.com/Machine-Learning-TO/",
          "title": "Machine Learning Torino",
        },
        "width": 75,
      },
      Object {
        "alt": "Natural Language Processing Copenhagen",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckev8rbsub38k0908fqj1hrrb",
        "idAlt": "ckev92qos3whm0916otaeehej",
        "img": "https://media.graphassets.com/QFyoufuTRS1L0WN3WELA",
        "link": "https://www.meetup.com/Natural-Language-Processing-Copenhagen-Meetup/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/QFyoufuTRS1L0WN3WELA",
          },
          "id": "ckev8rbsub38k0908fqj1hrrb",
          "site": "https://www.meetup.com/Natural-Language-Processing-Copenhagen-Meetup/",
          "title": "Natural Language Processing Copenhagen",
        },
        "width": 60,
      },
      Object {
        "alt": "Vienna Deep Learning",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckev8m2w83vhg0916iodrjr2e",
        "idAlt": "ckev8mrk73vnv091699lq5moy",
        "img": "https://media.graphassets.com/RHrz6AAwSJmpdTJPOH6q",
        "link": "https://www.meetup.com/Vienna-Deep-Learning-Meetup/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/RHrz6AAwSJmpdTJPOH6q",
          },
          "id": "ckev8m2w83vhg0916iodrjr2e",
          "site": "https://www.meetup.com/Vienna-Deep-Learning-Meetup/",
          "title": "Vienna Deep Learning",
        },
        "width": 100,
      },
      Object {
        "alt": "Stockholm Machine Learning Club",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckev8o6nm3w3v0a85wx3ghng7",
        "idAlt": "ckev8ovg53w5l0a8531l8ifa7",
        "img": "https://media.graphassets.com/5DTe9sZQkmiE9VkWLpmu",
        "link": "https://www.meetup.com/meetup-group-GwcrPppu/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/5DTe9sZQkmiE9VkWLpmu",
          },
          "id": "ckev8o6nm3w3v0a85wx3ghng7",
          "site": "https://www.meetup.com/meetup-group-GwcrPppu/",
          "title": "Stockholm Machine Learning Club",
        },
        "width": 110,
      },
      Object {
        "alt": "ai-fyi",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckevi25a0buv209082b9xxm15",
        "idAlt": "ckevi2t5j4gbf0916d0v40vu3",
        "img": "https://media.graphassets.com/CagxN0ofQFOfwa1bQm78",
        "link": "http://ai-fyi.com/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/CagxN0ofQFOfwa1bQm78",
          },
          "id": "ckevi25a0buv209082b9xxm15",
          "site": "http://ai-fyi.com/",
          "title": "ai-fyi",
        },
        "width": 80,
      },
      Object {
        "alt": "BCN",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckf27llhl523j0b77cqt83pbp",
        "idAlt": "ckf27mab44z3q0976m1v6clpq",
        "img": "https://media.graphassets.com/bkEXtTSTT3mLK73WWDzf",
        "link": "https://www.meetup.com/Bcn-ai/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/bkEXtTSTT3mLK73WWDzf",
          },
          "id": "ckf27llhl523j0b77cqt83pbp",
          "site": "https://www.meetup.com/Bcn-ai/",
          "title": "BCN",
        },
        "width": 90,
      },
      Object {
        "alt": "tribeofai",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckf3rr1rpdist0970d8wfeww5",
        "idAlt": "ckf3rrmv3diww09700jxxcsbk",
        "img": "https://media.graphassets.com/fL9qUA8TfGNynbJtPvlQ",
        "link": "https://www.tribeofai.com/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/fL9qUA8TfGNynbJtPvlQ",
          },
          "id": "ckf3rr1rpdist0970d8wfeww5",
          "site": "https://www.tribeofai.com/",
          "title": "tribeofai",
        },
        "width": 100,
      },
      Object {
        "alt": "lithuania",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckf3rtvd113fd09119ov75bqu",
        "idAlt": "ckf3ruf8z8tqa0b77gu86gztn",
        "img": "https://media.graphassets.com/QZWgtca8RL2vqzuqy1Xg",
        "link": "https://lithuania.ai/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/QZWgtca8RL2vqzuqy1Xg",
          },
          "id": "ckf3rtvd113fd09119ov75bqu",
          "site": "https://lithuania.ai/",
          "title": "lithuania",
        },
        "width": 150,
      },
      Object {
        "alt": "Riga AI, Machine Learning and Bots",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckf3rvz0g13nu0911bj9xcy57",
        "idAlt": "ckf3rwj4xdjjk0970g5lorsby",
        "img": "https://media.graphassets.com/FGfR8EqeRHKJ9YAYoTGM",
        "link": "https://www.meetup.com/Riga-AI-Machine-Learning-and-Bots/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/FGfR8EqeRHKJ9YAYoTGM",
          },
          "id": "ckf3rvz0g13nu0911bj9xcy57",
          "site": "https://www.meetup.com/Riga-AI-Machine-Learning-and-Bots/",
          "title": "Riga AI, Machine Learning and Bots",
        },
        "width": 80,
      },
      Object {
        "alt": "Data Science Portugal",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckf7yoowz6fse0911gghz4dt7",
        "idAlt": "ckf7yphjimuep0970g5f73lwv",
        "img": "https://media.graphassets.com/d7iWQxHWROizhYcSSL2X",
        "link": "https://www.meetup.com/datascienceportugal/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/d7iWQxHWROizhYcSSL2X",
          },
          "id": "ckf7yoowz6fse0911gghz4dt7",
          "site": "https://www.meetup.com/datascienceportugal/",
          "title": "Data Science Portugal",
        },
        "width": 80,
      },
      Object {
        "alt": "PyData Cyprus",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckfpjlp76w9bm0970uf3wm4la",
        "idAlt": "ckfpjmt6d64ch0b773ndioxff",
        "img": "https://media.graphassets.com/KIzjjHq8SgmzxR8ASGgY",
        "link": "https://www.meetup.com/PyData-Cyprus/",
        "order": null,
        "sponsor": Object {
          "avatar": null,
          "id": "ckfpjlp76w9bm0970uf3wm4la",
          "site": "https://www.meetup.com/PyData-Cyprus/",
          "title": "PyData Cyprus",
        },
        "width": 100,
      },
      Object {
        "alt": "bigdatarepublic",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckfsn3viu6pg70970lmgxvcb7",
        "idAlt": "ckfsn4h0kdj530b77cey4s04z",
        "img": "https://media.graphassets.com/nrq1Qe8bQJi2ILFAddeE",
        "link": "https://www.bigdatarepublic.nl/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/nrq1Qe8bQJi2ILFAddeE",
          },
          "id": "ckfsn3viu6pg70970lmgxvcb7",
          "site": "https://www.bigdatarepublic.nl/",
          "title": "bigdatarepublic",
        },
        "width": 90,
      },
      Object {
        "alt": "nextgrid.ai",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckfwv303uie710970lap9mb86",
        "idAlt": "ckfwv4bq7dgzw0911gh9ltnao",
        "img": "https://media.graphassets.com/VUWfjAQzTIqeLhAUTNCW",
        "link": "https://nextgrid.ai/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/VUWfjAQzTIqeLhAUTNCW",
          },
          "id": "ckfwv303uie710970lap9mb86",
          "site": "https://nextgrid.ai/",
          "title": "nextgrid.ai",
        },
        "width": 100,
      },
      Object {
        "alt": "Spain AI",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckg7t5vdcygur09115npt140l",
        "idAlt": "ckg7t6hwdygvr09113cqny1hg",
        "img": "https://media.graphassets.com/BA29TPSfeq8aLxtliwAR",
        "link": "https://www.spain-ai.com/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/BA29TPSfeq8aLxtliwAR",
          },
          "id": "ckg7t5vdcygur09115npt140l",
          "site": "https://www.spain-ai.com/",
          "title": "Spain AI",
        },
        "width": 100,
      },
      Object {
        "alt": "viennadatasciencegroup",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckgi0y24yk27w0b77ovl40vzv",
        "idAlt": "ckgi0yk3lk28v0b77rszutisr",
        "img": "https://media.graphassets.com/mTxQ8O5SPC526ucUav4e",
        "link": "https://viennadatasciencegroup.at/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/mTxQ8O5SPC526ucUav4e",
          },
          "id": "ckgi0y24yk27w0b77ovl40vzv",
          "site": "https://viennadatasciencegroup.at/",
          "title": "viennadatasciencegroup",
        },
        "width": 100,
      },
      Object {
        "alt": "PyLadies Amsterdam",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckgi10npqk2e40b776crchapd",
        "idAlt": "ckgi11b8scg390911wml63mfc",
        "img": "https://media.graphassets.com/ye1xM1mSRJS0socs0AId",
        "link": "https://amsterdam.pyladies.com/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/ye1xM1mSRJS0socs0AId",
          },
          "id": "ckgi10npqk2e40b776crchapd",
          "site": "https://amsterdam.pyladies.com/",
          "title": "PyLadies Amsterdam",
        },
        "width": 100,
      },
      Object {
        "alt": "Python Madrid",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckgky7227ae2q0970e2g84oq0",
        "idAlt": "ckgky7q3oae5g09700sfsdfjy",
        "img": "https://media.graphassets.com/NvBcF1zIR3SuA81QIUXT",
        "link": "https://www.meetup.com/python-madrid/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/NvBcF1zIR3SuA81QIUXT",
          },
          "id": "ckgky7227ae2q0970e2g84oq0",
          "site": "https://www.meetup.com/python-madrid/",
          "title": "Python Madrid",
        },
        "width": 150,
      },
      Object {
        "alt": "prg.ai",
        "category": "Partner",
        "contentType": "f188bcf25c8e419d9f8d10b0926dd825",
        "contentTypeAlt": "c52cf3fb6f1c41588ea7fc77a092f419",
        "id": "ckh0byhqo4rqr0911bvmx4q23",
        "idAlt": "ckh0bz62vcin80b77utksp11p",
        "img": "https://media.graphassets.com/amMcdkSwT0KQvCYUJ2ZA",
        "link": "https://prg.ai/en/",
        "order": null,
        "sponsor": Object {
          "avatar": Object {
            "url": "https://media.graphassets.com/amMcdkSwT0KQvCYUJ2ZA",
          },
          "id": "ckh0byhqo4rqr0911bvmx4q23",
          "site": "https://prg.ai/en/",
          "title": "prg.ai",
        },
        "width": 130,
      },
    ],
    "mod": "logos_xs sponsors-block_xs",
    "title": "Partners",
  },
]
`;

exports[`RS should prepare talks 1`] = `
Array [
  Array [],
]
`;

exports[`RS should prepare tracks 1`] = `
Array [
  "Talks & Q&A",
]
`;

exports[`RS should prepare workshops 1`] = `Array []`;
